fixed overflow

--- a/src/App.css
+++ b/src/App.css
@@ -26,6 +26,10 @@ body {
   color: var(--text-color);
 }
 
+#root {
+  overflow: hidden;
+}
+
 section {
   min-height: 100vh;
   padding: 10rem 9% 2rem;
